[package]
name = "reflicate"
version = "0.4.0"
edition = "2024"
description = "Deduplicate data by creating reflinks between identical files"
readme = "README.md"
license = "MIT"
repository = "https://github.com/gblach/reflicate"
keywords = ["cli", "deduplication", "filesystem", "reflink", "utility"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
argp = "0.4"
bincode = { version = "2", features = ["derive"] }
blake3 = "1"
cdb2 = "0.8"
fiemap = "0.2"
getrandom = "0.3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
