[package]
name = "reflicate"
version = "0.5.0"
edition = "2024"
description = "Deduplicate data by creating reflinks between identical files"
readme = "README.md"
license = "MIT"
repository = "https://github.com/gblach/reflicate"
keywords = ["cli", "deduplication", "filesystem", "reflink", "utility"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
argp = "0.4"
blake3 = "1"
cdb2 = "0.8"
fiemap = "0.2"
getrandom = "0.4"
indicatif = "0.18"
libc = "0.2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
wincode = { version = "0.5", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
